# vosem.me

./: .gitignore  index.html  pyproject.toml  vosem.py  wsgi.py
css/: main.css
static/css/: main.css
templates/: base.html  index.html  photos.html
vosem/: __main__.py  web.py  wsgi.py
vosem/static/css/: main.css
vosem/templates/: base.html  resume.html
